Chapter 1
1.9 Exercises
Exercise 1.1. It is a good idea to read this book in front of a computer so you can try out the
examples as you go.
Whenever you are experimenting with a new feature, you should try to make mistakes. For example,
in the “Hello, world!” program, what happens if you leave out one of the quotation marks? What if
you leave out both? What if you spell print wrong?
This kind of experiment helps you remember what you read; it also helps when you are programming,
because you get to know what the error messages mean. It is better to make mistakes now and on
purpose than later and accidentally.
1. In a print statement, what happens if you leave out one of the parentheses, or both?

>>> print("Hello, world!"
  File "<stdin>", line 1
    print("Hello, world!"
          ^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

///

>>> print"Hello, world!"
  File "<stdin>", line 1
    print"Hello, world!"
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?

2. If you are trying to print a string, what happens if you leave out one of the quotation marks,
or both?

>>> print("Hello, world!)
  File "<stdin>", line 1
    print("Hello, world!)
          ^
SyntaxError: unterminated string literal (detected at line 1)

///

>>> print(Hello, world!)
  File "<stdin>", line 1
    print(Hello, world!)
                      ^
SyntaxError: invalid syntax

3. You can use a minus sign to make a negative number like -2. What happens if you put a plus
sign before a number? What about 2++2?

>>> +2
2

///

>>> 2++2
4

4. In math notation, leading zeros are ok, as in 09. What happens if you try this in Python?
What about 011?

>>> 09
  File "<stdin>", line 1
    09
    ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers

///

>>> 011
  File "<stdin>", line 1
    011
    ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers

5. What happens if you have two values with no operator between them?

>>> 1 1
  File "<stdin>", line 1
    1 1
      ^
SyntaxError: invalid syntax

Exercise 1.2. Start the Python interpreter and use it as a calculator.
1. How many seconds are there in 42 minutes 42 seconds?

>>> total_seconds = (42 * 60) + 42
>>> total_seconds
2562

2. How many miles are there in 10 kilometers? Hint: there are 1.61 kilometers in a mile.

>>> kilometers = 10
>>> miles = kilometers / 1.61
>>> miles
6.211180124223602

3. If you run a 10 kilometer race in 42 minutes 42 seconds, what is your average pace (time per
mile in minutes and seconds)? What is your average speed in miles per hour?

# Given data
distance_km = 10 # distance in kilometers
time_minutes = 42 # total time in minutes
time_seconds = 42 # additional seconds
mile_to_km = 1.61 # conversion factor from miles to kilometers

# Convert total time to minutes
total_time_minutes = time_minutes + (time_seconds / 60)

# Calculate pace per mile
distance_miles = distance_km / mile_to_km
pace_per_mile_minutes = total_time_minutes / distance_miles

# Convert pace to minutes and seconds
pace_minutes = int(pace_per_mile_minutes)
pace_seconds = int((pace_per_mile_minutes - pace_minutes) * 60)

# Calculate average speed in miles per hour
speed_mph = distance_miles / (total_time_minutes / 60)

# Output the results
print("Average pace: {:.0f} minutes {:.0f} seconds per mile".format(pace_minutes, pace_seconds))
print("Average speed: {:.2f} miles per hour".format(speed_mph))

Average pace: 6 minutes 52 seconds per mile
Average speed: 8.73 miles per hour
